Move login to account page

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
       <a href="index.html">Home</a>
       <a href="settings.html">Settings</a>
       <a href="about.html">About</a>
+      <a href="account.html">Account</a>
     </nav>
   </header>
 
