--- a/index.html
+++ b/index.html
@@ -13,32 +13,11 @@
       <a href="index.html">Home</a>
       <a href="settings.html">Settings</a>
       <a href="about.html">About</a>
+      <a href="account.html">Account</a>
     </nav>
   </header>
 
   <main class="main">
-    <div class="card loginCard">
-      <h1 class="pageTitle">Sign in</h1>
-      <p class="pageSub">Use your Foolder account.</p>
-
-      <div class="formRow">
-        <input id="loginUser" class="input" type="text" placeholder="Username" />
-        <input id="loginPass" class="input" type="password" placeholder="Password" />
-        <button id="loginBtn" class="btn">Login</button>
-      </div>
-
-      <div class="divider"></div>
-
-      <div class="formRow">
-        <input id="registerUser" class="input" type="text" placeholder="New username" />
-        <input id="registerPass" class="input" type="password" placeholder="New password" />
-        <button id="registerBtn" class="btn btnSecondary">Create account</button>
-      </div>
-
-      <div class="loginStatus" id="loginStatus">Not logged in.</div>
-      <button id="logoutBtn" class="btn btnSecondary" style="margin-top:10px; display:none;">Logout</button>
-    </div>
-
     <div class="iframeWrap">
       <iframe id="appFrame" class="appFrame" title="Foolder App"></iframe>
     </div>
