Add account deletion request link

--- a/account.html
+++ b/account.html
@@ -191,6 +191,9 @@
     </div>
     
     <div id="status" class="status hidden"></div>
+    <div style="margin-top: 20px; text-align: center;">
+      <a class="toggle-link" href="delete-account.html">Request account and data deletion</a>
+    </div>
   </div>
 
   <script src="assets/account.js"></script>
