--- a/account.html
+++ b/account.html
@@ -150,6 +150,19 @@
     .hidden {
       display: none;
     }
+    .footer {
+      margin-top: 24px;
+      text-align: center;
+      font-size: 12px;
+      color: #9a9aa3;
+    }
+    .footer a {
+      color: #ffb357;
+      text-decoration: none;
+    }
+    .footer a:hover {
+      color: #ff8a00;
+    }
   </style>
 </head>
 <body>
@@ -193,6 +206,9 @@
     <div id="status" class="status hidden"></div>
     <div style="margin-top: 20px; text-align: center;">
       <a class="toggle-link" href="delete-account.html">Request account and data deletion</a>
+    </div>
+    <div class="footer">
+      <a href="privacy.html">Privacy Policy</a>
     </div>
   </div>
 
